Remove text align center to fix fountain bug

--- a/src/plugin-stylings/fountain.scss
+++ b/src/plugin-stylings/fountain.scss
@@ -11,7 +11,7 @@
   & > .dialogue {
     p:not(.parenthetical):last-of-type {
       margin: 0;
-      text-align: center;
+      // text-align: center;
       margin-bottom: 1em;
     }
     + p {
